# hello-aimio-cmake

./: .gitignore  CMakeLists.txt  README.md  main.cpp
